--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
       - id: check-json
       - id: check-toml
       - id: check-yaml
-      - id: check-added-large-files
+      # - id: check-added-large-files
       - id: detect-private-key
       - id: requirements-txt-fixer
   - repo: git@github.com:pycqa/isort
