--- a/environments/requirements_backend.txt
+++ b/environments/requirements_backend.txt
@@ -1,3 +1,4 @@
+faiss-cpu==1.9.0
 matplotlib
 mypy==1.9.0
 pandas==2.2.3
@@ -5,3 +6,4 @@ pre-commit>=3.7.0,<3.8.0
 pytest>=8.1.0
 scikit-learn==1.5.2
 seaborn
+sentence-transformers==3.2.0
