--- a/environments/requirements_backend.txt
+++ b/environments/requirements_backend.txt
@@ -4,6 +4,7 @@ mypy==1.9.0
 pandas==2.2.3
 pre-commit>=3.7.0,<3.8.0
 pytest>=8.1.0
+rapidfuzz==3.10.0
 scikit-learn==1.5.2
 seaborn
 sentence-transformers==3.2.0
