--- a/environments/requirements_backend.txt
+++ b/environments/requirements_backend.txt
@@ -1,4 +1,5 @@
 faiss-cpu==1.9.0
+keybert==0.8.5
 matplotlib
 mypy==1.9.0
 pandas==2.2.3
@@ -8,3 +9,4 @@ rapidfuzz==3.10.0
 scikit-learn==1.5.2
 seaborn
 sentence-transformers==3.2.0
+spacy==3.8.2
